--- a/src/app/manage/manage-product/manage-product.component.html
+++ b/src/app/manage/manage-product/manage-product.component.html
@@ -13,7 +13,7 @@
 <div class="card">
   <div class="card-header">
     <b>All of product :</b>
-    <button [routerLink]="['/manage/product/add']" class="btn btn-success float-right">Thêm</button>
+    <button [routerLink]="['/manage/product/add']" class="btn btn-success float-right"><i class="fa fa-pencil"></i></button>
   </div>
   <div class="card-body">
     <div class="table-responsive">
